modified:   .gitignore 	modified:   Dockerfile 	modified:   api/schemas/schemas.go 	deleted:    api/schemas/schemas_test.go 	modified:   config.yaml 	modified:   go.mod 	modified:   go.sum 	modified:   internal/analysis/active/taint/analyzer.go 	modified:   internal/analysis/active/taint/taint_analyzer_test.go 	modified:   internal/analysis/active/taint/types.go 	modified:   internal/analysis/active/timeslip/oracle.go 	modified:   internal/analysis/active/timeslip/timeslip_analyzer.go 	modified:   internal/analysis/core/types.go 	modified:   internal/browser/analysis_context.go 	modified:   internal/browser/analysis_context_test.go 	deleted:    internal/browser/browser_setup_test.go 	modified:   internal/browser/harvester.go 	modified:   internal/browser/interactor.go 	modified:   internal/browser/interactor_test.go 	modified:   internal/browser/manager.go 	modified:   internal/browser/manager_test.go 	modified:   internal/browser/stealth/evasions.js 	modified:   internal/browser/stealth/stealth.go 	modified:   internal/config/config.go 	modified:   internal/discovery/discover_dom.go 	modified:   internal/discovery/discovery.go 	modified:   internal/engine/engine.go 	modified:   internal/network/proxy.go 	modified:   internal/orchestrator/orchestrator.go 	modified:   internal/store/store.go 	modified:   internal/worker/adapters/agent_adapter.go 	modified:   internal/worker/adapters/ato_adapter.go 	modified:   internal/worker/adapters/header_adapter.go 	modified:   internal/worker/adapters/idor_adapter.go 	modified:   internal/worker/adapters/jwt_adapter.go 	deleted:    internal/worker/adapters/taint_analyzer_test.go 	modified:   internal/worker/worker.go 	modified:   migrations/001_initial_schema.sql 	api/schemas/constants_test.go 	api/schemas/helpers_test.go 	api/schemas/jsontags_test.go 	internal/browser/browser_helper_test.go 	internal/config/config_test.go

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ scalpel-cli.exe
 # Go module vendor directory
 vendor/
 
+# Go build, test, coverage, and profiling artifacts
+*.out
+*.test
+*.prof
+coverage.txt
+
 # ## Project Specific ##
 # Log files and directory as defined in config.yaml
 logs/
@@ -13,13 +19,18 @@ logs/
 # Cache directory used by the discovery engine
 .scalpel_cache/
 
-# Local configuration overrides
+# Local configuration overrides and environment files
 # It's good practice to commit config.yaml as a template,
 # but ignore local versions with secrets.
 config.local.yaml
 *.local.yaml
-scalpel-cli/internal/browser/testing/
+.env
+.env.*
+
+# Corrected path based on project structure
+internal/browser/testing/
 test_imports.go
+
 # ## Common ##
 # IDE and editor directories
 .vscode/
