--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,21 @@
   },
   "homepage": "https://github.com/xkilldash9x/scalpel-cli#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "babel-jest": "^29.7.0",
+    "esbuild": "^0.25.11",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "testEnvironmentOptions": {}
+    "testEnvironmentOptions": {},
+    "collectCoverageFrom": [
+      "internal/analysis/active/taint/taint_shim.js",
+      "internal/browser/humanoid/scrolling.js"
+    ],
+    "transform": {
+      "<rootDir>/internal/analysis/active/taint/taint_shim.js": "<rootDir>/jest-go-transform.js"
+    }
   }
 }
