feat: Overhaul browser automation, testing, and build pipeline
This commit introduces a major architectural refactor to improve the stability, testability, and reliability of the entire framework, with a primary focus on the browser automation engine and its supporting infrastructure.

Key enhancements include:

Robust Browser Interaction Engine:

Refactored the humanoid and session packages to use robust, atomic JavaScript execution and parsing, eliminating silent failures and race conditions in scrolling and element interaction.
Improved context handling across all browser actions (Navigate, Click, Type) to ensure proper timeout and cancellation propagation, preventing flaky tests and hung operations.
Enhanced the ExposeFunction mechanism with a JS wrapper to reliably handle argument serialization between the browser and Go, fixing a critical integration bug.
Integrated JS/TS Testing Framework:

Introduced a complete Jest and Babel testing environment to enable unit and integration testing for browser-side JavaScript code (scrolling.js, taint_shim.js).
Added a custom Jest transformer (jest-go-transform.js) to handle Go template placeholders, allowing for isolated testing of Go-embedded JS files.
Build and Deployment Pipeline:

Updated and cleaned up both Go and Node.js dependencies to modern versions.
Test Suite Stabilization:

Overhauled the browser session and humanoid test suites (session_test.go, scrolling_test.go) to eliminate flakiness. This includes using deterministic mocks, fixing race conditions through dependency injection, and adding more resilient assertions.

--- a/.gitignore
+++ b/.gitignore
@@ -24,12 +24,28 @@ logs/
 # but ignore local versions with secrets.
 config.local.yaml
 *.local.yaml
+.credentials.json
 .env
 .env.*
 
 # Corrected path based on project structure
 internal/browser/testing/
 test_imports.go
+
+# Node.js dependencies
+node_modules/
+
+# Build artifacts
+build/
+dist/
+
+# Test coverage reports
+coverage/
+.nyc_output/
+.eslintcache
+
+# Jest cache
+.jest-cache/
 
 # ## Common ##
 # IDE and editor directories
