--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "testEnvironmentOptions": {},
     "collectCoverageFrom": [
       "internal/analysis/active/taint/taint_shim.js",
-      "internal/browser/humanoid/scrolling.js"
+      "internal/browser/humanoid/scrolling.js",
+      "internal/agent/js_scripts/captcha_detection.js",
+      "internal/agent/js_scripts/form_analysis.js",
+      "internal/agent/js_scripts/verification_error.js",
+      "internal/agent/js_scripts/verification_success.js"  
     ],
     "transform": {
       "internal/analysis/active/taint/taint_shim\\.js$": "<rootDir>/jest-go-transform.js"
